[project]
name = "carcols-normalizer"
version = "0.1.0"
description = "Normalize VMT_* <Item> runs in carcols.meta files"
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
